--- a/pages/Comentarios.html
+++ b/pages/Comentarios.html
@@ -1,112 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Soy Leia - Comentarios</title>
-        <link rel="stylesheet" href="../css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-        <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
-        <link rel="shortcut icon" href="../favicom.ico.png" type="image/x-icon">
-        <link rel="stylesheet" href="../css/estilos.css">
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid section_flex_header">
-                  <a class="navbar-brand" href="#">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Soy Leia - Comentarios</title>
+    <link rel="stylesheet" href="../css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../favicom.ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/estilos.css">
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid section_flex_header">
+                <a class="navbar-brand" href="../index.html">
                     <i class="fas fa-paw"></i> Soy Leia
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./sobremi.html">Sobre Mi</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./familia.html">Familia</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./aventuras.html">Aventuras</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#">Comentarios</a>
-                      </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./sobremi.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./familia.html">Familia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./aventuras.html">Aventuras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Comentarios</a>
+                        </li>
                     </ul>
-                  </div>
                 </div>
-              </nav>
-        </header>  
-                   
-        <main>
-            <section>
-                <div class="divImgPrincipal">
-                    <img src="../assets/img/rsz_foto_principal.jpg" alt="Imagen Principal">
-                </div>
-                <h1 class="fuentePrincipal shadow-lg p-3 mb-5 bg-body rounded">Comentarios</h1>
-            </section>
+            </div>
+        </nav>
+    </header>
 
-            <section class="section_flex_main">
-                <div class="divParrafo">
-                    <p class="texto">Les dejo este espacio para que me puedan compartir feedback sobre la pagina, si les gusto el sitio web o podriamos agregar mas contenido. Tambien pueden dejarnos comentarios sobre lugares a los cuales podria conocer para nuevas aventuras</p>
-                </div>
-            </section>
-            <section class="section_flex_form">
-                <form action="">
-                    <div class="mb-3">
-                        <label for="text" class="form-label">Nombre:</label>
-                        <input type="text" class="form-control" placeholder="Nombre">
-                    </div>
-                    <div class="mb-3">
-                        <label for="mail" class="form-label">Mail:</label>
-                        <input type="email" class="form-control"  placeholder="ejemplo@gmail.com">
-                    </div>
-                    <div class="mb-3">
-                        <label for="date" class="form-label">Fecha de feedback:</label>
-                        <input type="date" class="form-control" placeholder="Introducir fecha de feedback">
-                    </div>
-                    <div>
-                        <label for="exampleFormControlTextarea1" class="form-label">Feedback</label>
-                        <textarea name="" id="" class="form-control" cols="50" rows="5" placeholder="Por favor colocar el feedback aqui"></textarea>
-                    </div>
-                    <div>
-                        <button type="reset" class="btn btn-primary">Borrar opiniones</button>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </div>  
-                </form>
-            </section>    
-        </main>
+    <main>
+        <section>
+            <h1 class="fuentePrincipal shadow-lg p-3 mb-5 bg-body rounded">Comentarios</h1>
+            <div class="divImgPrincipal">
+                <img src="../assets/img/rsz_foto_principal.jpg" alt="Imagen Principal">
+            </div>
+        </section>
 
-        <footer>
-            <h2 class="fuenteSecundaria divParrafo">Informacion de contacto</h2>
-            <section class="section_flex_footer">
-                <div class="divIcon">
-                    <a target="_blank" href="https://www.instagram.com/_soyleia_/?igshid=MzRlODBiNWFlZA%3D%3D">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
+        <section class="section_flex_main">
+            <div class="divParrafo">
+                <p class="texto">Les dejo este espacio para que me puedan compartir feedback sobre la pagina, si les
+                    gusto el sitio web o podriamos agregar mas contenido. Tambien pueden dejarnos comentarios sobre
+                    lugares a los cuales podria conocer para nuevas aventuras</p>
+            </div>
+        </section>
+        <section class="section_flex_form">
+            <form action="">
+                <div class="mb-3">
+                    <label for="text" class="form-label">Nombre:</label>
+                    <input type="text" class="form-control" placeholder="Nombre">
                 </div>
-                <div class="divIcon">
-                    <a target="_blank" href="https://www.tiktok.com/es/">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
+                <div class="mb-3">
+                    <label for="mail" class="form-label">Mail:</label>
+                    <input type="email" class="form-control" placeholder="ejemplo@gmail.com">
                 </div>
-                <div class="divIcon">
-                    <a target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHvZzbTkNFLKBmcbKCdVvKnRFnxXfTScxDMLVdbHTCGvmQrSXcbRtHzlJWfqFGVxZDfVJfm">
-                        <i class="far fa-envelope"></i>
-                    </a>
+                <div class="mb-3">
+                    <label for="date" class="form-label">Fecha de feedback:</label>
+                    <input type="date" class="form-control" placeholder="Introducir fecha de feedback">
                 </div>
-                <div class="divIcon">
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491138209153">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
+                <div>
+                    <label for="exampleFormControlTextarea1" class="form-label">Feedback</label>
+                    <textarea name="" id="" class="form-control" cols="50" rows="5"
+                        placeholder="Por favor colocar el feedback aqui"></textarea>
                 </div>
-            </section>
-        </footer>
-        <script src="../js/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>   
-    </body>
+                <div>
+                    <button type="reset" class="btn btn-primary">Borrar opiniones</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <h2 class="fuenteSecundaria divParrafo">Informacion de contacto</h2>
+        <section class="section_flex_footer">
+            <div class="divIcon">
+                <a target="_blank" href="https://www.instagram.com/_soyleia_/?igshid=MzRlODBiNWFlZA%3D%3D">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+            <div class="divIcon">
+                <a target="_blank" href="https://www.tiktok.com/es/">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+            </div>
+            <div class="divIcon">
+                <a target="_blank"
+                    href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHvZzbTkNFLKBmcbKCdVvKnRFnxXfTScxDMLVdbHTCGvmQrSXcbRtHzlJWfqFGVxZDfVJfm">
+                    <i class="far fa-envelope"></i>
+                </a>
+            </div>
+            <div class="divIcon">
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=5491138209153">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+            </div>
+        </section>
+    </footer>
+    <script src="../js/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
