--- a/pages/aventuras.html
+++ b/pages/aventuras.html
@@ -1,134 +1,155 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Soy Leia - Aventuras</title>
-        <link rel="stylesheet" href="../css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-        <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
-        <link rel="shortcut icon" href="../favicom.ico.png" type="image/x-icon">
-        <link rel="stylesheet" href="../css/estilos.css">
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid section_flex_header">
-                  <a class="navbar-brand" href="#">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Soy Leia - Aventuras</title>
+    <link rel="stylesheet" href="../css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../favicom.ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/estilos.css">
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid section_flex_header">
+                <a class="navbar-brand" href="../index.html">
                     <i class="fas fa-paw"></i> Soy Leia
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre Mi</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./familia.html">Familia</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#">Aventuras</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./Comentarios.html">Comentarios</a>
-                      </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./familia.html">Familia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Aventuras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Comentarios.html">Comentarios</a>
+                        </li>
                     </ul>
-                  </div>
                 </div>
-              </nav>
-        </header>
-
-        <main>
-            <section>
-                <div class="divImgPrincipal">
-                    <img src="../assets/img/rsz_foto_principal.jpg" alt="Imagen Principal">
-                </div>
-                <h1 class="fuentePrincipal shadow-lg p-3 mb-5 bg-body rounded">Aventuras</h1>
-            </section> 
-            
-            <div class="divParrafo">
-                <h2 class="fuenteSecundaria">Mis lugares favoritos</h2>
             </div>
+        </nav>
+    </header>
 
-            <section class="section_flex_main">
-                
-                <div class="divParrafo">
-                    <p class="texto">Uno de los lugares que disfruto ir a correr, jugar y conocer amigos nuevos es el Vial Costero de Vicente Lopez. Aca solemos ir cuando hace calorcito y no hace tanto frio porque mis papas disfrutan de comer y tomar sol.</p>
-                </div>    
-                <div class="divImgAv">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13148.119068315294!2d-58.4751158!3d-34.5274738!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6ab7f2ff9df%3A0xfb544e106b85a935!2sCostanera%20Vicente%20L%C3%B3pez!5e0!3m2!1ses-419!2sar!4v1686885200634!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>    
-                <div class="divImgAv">
-                    <img src="../assets/img/rsz_foto_principal.jpg" alt="Leia tomando sol en el vial costero">
-                </div>
-                <div class="divParrafo">
-                    <p class="texto">Otro de mis lugares preferidos para correr y jugar es la plaza que esta cerca de mi casita porque tenemos bastante lugar para gastar energias, jugar con la pelota y al estar cerca vamos bastante seguido.</p>
-                </div>    
-                <div class="divImgAv">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.5797479937073!2d-58.526144027709954!3d-34.53887385058718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7332e37659f%3A0xd9125d666c6cad62!2sPlaza%20La%20Paz!5e0!3m2!1ses-419!2sar!4v1686885355194!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="divImgAv">    
-                    <img src="../assets/img/rsz_leia-plazaV2.jpg" alt="Leia descansando en la plaza">
-                </div>
-                <div class="divParrafo">
-                    <p class="texto">Yo mientras tanto con que tenga una pelota, tenga mucho campo o verde para correr, pueda tomar sol y descansar soy feliz como pueden ver.</p>
-                </div>    
-            </section>
+    <main>
+        <section>
+            <h1 class="fuentePrincipal shadow-lg p-3 mb-5 bg-body rounded">Aventuras</h1>
+            <div class="divImgPrincipal">
+                <img src="../assets/img/rsz_foto_principal.jpg" alt="Imagen Principal">
+            </div>
+        </section>
+
+        <div class="divParrafo">
+            <h2 class="fuenteSecundaria">Mis lugares favoritos</h2>
+        </div>
+
+        <section class="section_flex_main">
 
             <div class="divParrafo">
-                <h2 class="fuenteSecundaria">Viajes y aventuras</h2>
+                <p class="texto">Uno de los lugares que disfruto ir a correr, jugar y conocer amigos nuevos es el Vial
+                    Costero de Vicente Lopez. Aca solemos ir cuando hace calorcito y no hace tanto frio porque mis papas
+                    disfrutan de comer y tomar sol.</p>
             </div>
-            <section class="section_flex_main">
-                    <div class="section_flex_main">
-                        <div class="divImgAv">
-                            <img src="../assets/img/rsz_mendoza.jpg" alt="Paseando por las montañas en Mendoza">
-                        </div>
-                        <div class="divImgAv">
-                            <img src="../assets/img/rsz_santa_clarav2.jpg" alt="Posando con la estuata de Maradona">
-                        </div>
-                        <div class="divImgAv">
-                            <img src="../assets/img/rsz_claromecov2.jpg" alt="En la playa descansando">
-                        </div>
-                    </div>
-                    <div class="divParrafo">
-                        <p class="texto"> Tambien les muestro algunas de mis aventuras recorriendo el pais en mis vacaciones. Como por ejemplo cuando nos fuimos de viaje a Claromeco y conoci la playa por primera vez, fue algo muy lindo porque hice muchos pozos en la arena y tambien jugue con otros perritos hasta quedar totalmente agotada.</p>
-                        <p class="texto">Otra aventura fue la vez que fuimos a Santa Clara y ibamos caminando la ciudad de punta a punta para que conozca todo lo que existe. Ademas de todos los lugares cerca de Santa Clara que tambien conoci. </p>
-                        <p class="texto">La ultima aventura que hicimos hasta el momento fue que fuimos a San Rafael en Mendoza, caminamos un monton por las montañas haciendo trekking</p>
-                    </div>
-            </section>
-        </main>
+            <div class="divImgAv">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13148.119068315294!2d-58.4751158!3d-34.5274738!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6ab7f2ff9df%3A0xfb544e106b85a935!2sCostanera%20Vicente%20L%C3%B3pez!5e0!3m2!1ses-419!2sar!4v1686885200634!5m2!1ses-419!2sar"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="divImgAv">
+                <img src="../assets/img/rsz_foto_principal.jpg" alt="Leia tomando sol en el vial costero">
+            </div>
+            <div class="divParrafo">
+                <p class="texto">Otro de mis lugares preferidos para correr y jugar es la plaza que esta cerca de mi
+                    casita porque tenemos bastante lugar para gastar energias, jugar con la pelota y al estar cerca
+                    vamos bastante seguido.</p>
+            </div>
+            <div class="divImgAv">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.5797479937073!2d-58.526144027709954!3d-34.53887385058718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7332e37659f%3A0xd9125d666c6cad62!2sPlaza%20La%20Paz!5e0!3m2!1ses-419!2sar!4v1686885355194!5m2!1ses-419!2sar"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="divImgAv">
+                <img src="../assets/img/rsz_leia-plazaV2.jpg" alt="Leia descansando en la plaza">
+            </div>
+            <div class="divParrafo">
+                <p class="texto">Yo mientras tanto con que tenga una pelota, tenga mucho campo o verde para correr,
+                    pueda tomar sol y descansar soy feliz como pueden ver.</p>
+            </div>
+        </section>
 
-        <footer>
-            <h2 class="fuenteSecundaria divParrafo">Informacion de contacto</h2>
-            <section class="section_flex_footer">
-                <div class="divIcon">
-                    <a target="_blank" href="https://www.instagram.com/_soyleia_/?igshid=MzRlODBiNWFlZA%3D%3D">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
+        <div class="divParrafo">
+            <h2 class="fuenteSecundaria">Viajes y aventuras</h2>
+        </div>
+        <section class="section_flex_main">
+            <div class="section_flex_main">
+                <div class="divImgAv">
+                    <img src="../assets/img/rsz_mendoza.jpg" alt="Paseando por las montañas en Mendoza">
                 </div>
-                <div class="divIcon">
-                    <a target="_blank" href="https://www.tiktok.com/es/">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
+                <div class="divImgAv">
+                    <img src="../assets/img/rsz_santa_clarav2.jpg" alt="Posando con la estuata de Maradona">
                 </div>
-                <div class="divIcon">
-                    <a target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHvZzbTkNFLKBmcbKCdVvKnRFnxXfTScxDMLVdbHTCGvmQrSXcbRtHzlJWfqFGVxZDfVJfm">
-                        <i class="far fa-envelope"></i>
-                    </a>
+                <div class="divImgAv">
+                    <img src="../assets/img/rsz_claromecov2.jpg" alt="En la playa descansando">
                 </div>
-                <div class="divIcon">
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491138209153">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
-                </div>
-            </section>
-        </footer>
+            </div>
+            <div class="divParrafo">
+                <p class="texto"> Tambien les muestro algunas de mis aventuras recorriendo el pais en mis vacaciones.
+                    Como por ejemplo cuando nos fuimos de viaje a Claromeco y conoci la playa por primera vez, fue algo
+                    muy lindo porque hice muchos pozos en la arena y tambien jugue con otros perritos hasta quedar
+                    totalmente agotada.</p>
+                <p class="texto">Otra aventura fue la vez que fuimos a Santa Clara y ibamos caminando la ciudad de punta
+                    a punta para que conozca todo lo que existe. Ademas de todos los lugares cerca de Santa Clara que
+                    tambien conoci. </p>
+                <p class="texto">La ultima aventura que hicimos hasta el momento fue que fuimos a San Rafael en Mendoza,
+                    caminamos un monton por las montañas haciendo trekking</p>
+            </div>
+        </section>
+    </main>
 
-        <script src="../js/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>    
-    </body>
+    <footer>
+        <h2 class="fuenteSecundaria divParrafo">Informacion de contacto</h2>
+        <section class="section_flex_footer">
+            <div class="divIcon">
+                <a target="_blank" href="https://www.instagram.com/_soyleia_/?igshid=MzRlODBiNWFlZA%3D%3D">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+            <div class="divIcon">
+                <a target="_blank" href="https://www.tiktok.com/es/">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+            </div>
+            <div class="divIcon">
+                <a target="_blank"
+                    href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHvZzbTkNFLKBmcbKCdVvKnRFnxXfTScxDMLVdbHTCGvmQrSXcbRtHzlJWfqFGVxZDfVJfm">
+                    <i class="far fa-envelope"></i>
+                </a>
+            </div>
+            <div class="divIcon">
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=5491138209153">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+            </div>
+        </section>
+    </footer>
+
+    <script src="../js/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
