--- a/index.html
+++ b/index.html
@@ -1,60 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Soy Leia - Inicio</title>
-        <link rel="stylesheet" href="./css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-        <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
-        <link rel="shortcut icon" href="./favicom.ico.png" type="image/x-icon">
-        <link rel="stylesheet" href="./css/estilos.css">
-    </head>
-    <body>
-        <div class="contenedor">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Soy Leia - Inicio</title>
+    <link rel="stylesheet" href="./css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./favicom.ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/estilos.css">
+</head>
+
+<body>
+    <div class="contenedor">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid section_flex_header">
-                  <a class="navbar-brand" href="#">
-                    <i class="fas fa-paw"></i> Soy Leia
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/sobremi.html">Sobre Mi</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/familia.html">Familia</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/aventuras.html">Aventuras</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./pages/Comentarios.html">Comentarios</a>
-                      </li>
-                    </ul>
-                  </div>
+                    <a class="navbar-brand" href="./index.html">
+                        <i class="fas fa-paw"></i> Soy Leia
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/sobremi.html">Sobre Mi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/familia.html">Familia</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/aventuras.html">Aventuras</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/Comentarios.html">Comentarios</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-              </nav> 
-        </header>  
+            </nav>
+        </header>
 
         <main>
             <section>
+                <h1 class="fuentePrincipal shadow-lg p-3 mb-5 bg-body rounded">Bienvenido a las aventuras de Leia</h1>
                 <div class="divImgPrincipal">
                     <img src="./assets/img/rsz_foto_principal.jpg" alt="Imagen Principal">
                 </div>
-                <h1 class="fuentePrincipal shadow-lg p-3 mb-5 bg-body rounded">Bienvenido a las aventuras de Leia</h1>
             </section>
-            
+
             <section class="section_flex_main">
                 <div class="divParrafo">
-                    <p class="texto">Hola, como andan ustedes? Quiero darles la bienvenida a mi sitio web en donde van a conocer un poco mi historia, mis aventuras, tambien voy a contarles un poco la historia de mi familia y con quienes suelo jugar.</p>   
+                    <p class="texto">Hola, como andan ustedes? Quiero darles la bienvenida a mi sitio web en donde van a
+                        conocer un poco mi historia, mis aventuras, tambien voy a contarles un poco la historia de mi
+                        familia y con quienes suelo jugar.</p>
                 </div>
                 <div class="divImgIndex">
                     <img src="./assets/img/rsz_collage.jpg" alt="Imagen collage de leia">
@@ -63,20 +69,25 @@
                     <img src="./assets/img/rsz_1tezza_2022_02_27_154656367.jpg" alt="Imagen de Leia con sus papis">
                 </div>
             </section>
-            
+
             <div class="divParrafo">
                 <h2 class="fuenteSecundaria">Idea sobre la creacion de mi sitio web</h2>
             </div>
 
-            <section class="section_flex_main">    
+            <section class="section_flex_main">
                 <div class="divParrafo">
-                    <p class="texto">Espero que les guste toda esta nueva experiencia en la que estoy incursionando y puedan dejarme sus comentarios o ideas sobre nuevas aventuras para que les diga a mis papis y seguir compartiendo con ustedes </p>
-                    <p class="texto">Esta idea surgio porque en la semana duermo mucho y por momentos me aburro ya que mi papi no puede jugar conmigo porque tiene que trabajar, entonces se me ocurrio explayar en este sitio web para que como comente anteriormente me conozcan y sepan todo lo que hago. Espero les guste :)</p>
+                    <p class="texto">Espero que les guste toda esta nueva experiencia en la que estoy incursionando y
+                        puedan dejarme sus comentarios o ideas sobre nuevas aventuras para que les diga a mis papis y
+                        seguir compartiendo con ustedes </p>
+                    <p class="texto">Esta idea surgio porque en la semana duermo mucho y por momentos me aburro ya que
+                        mi papi no puede jugar conmigo porque tiene que trabajar, entonces se me ocurrio explayar en
+                        este sitio web para que como comente anteriormente me conozcan y sepan todo lo que hago. Espero
+                        les guste :)</p>
                 </div>
                 <div class="divImgIndexMain">
                     <img src="./assets/img/rsz_funko_leia.jpg" alt="Funko personalizado de la perra">
                 </div>
-            </section>    
+            </section>
         </main>
 
         <footer>
@@ -93,7 +104,8 @@
                     </a>
                 </div>
                 <div class="divIcon">
-                    <a target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHvZzbTkNFLKBmcbKCdVvKnRFnxXfTScxDMLVdbHTCGvmQrSXcbRtHzlJWfqFGVxZDfVJfm">
+                    <a target="_blank"
+                        href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHvZzbTkNFLKBmcbKCdVvKnRFnxXfTScxDMLVdbHTCGvmQrSXcbRtHzlJWfqFGVxZDfVJfm">
                         <i class="far fa-envelope"></i>
                     </a>
                 </div>
@@ -105,6 +117,7 @@
             </section>
         </footer>
 
-        <script src="./js/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>   
-    </body>
+        <script src="./js/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
