--- a/pages/aventuras.html
+++ b/pages/aventuras.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soy Leia - Aventuras</title>
+    <title>Soy Leia | Aventuras</title>
     <link rel="stylesheet" href="../css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicom.ico.png" type="image/x-icon">
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre Mi</a>
+                            <a class="nav-link" href="./sobremi.html">Sobre Mi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./familia.html">Familia</a>
