--- a/pages/Comentarios.html
+++ b/pages/Comentarios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soy Leia - Comentarios</title>
+    <title>Soy Leia | Comentarios</title>
     <link rel="stylesheet" href="../css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a26c43f595.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicom.ico.png" type="image/x-icon">
@@ -83,7 +83,7 @@
                 </div>
                 <div>
                     <button type="reset" class="btn btn-primary">Borrar opiniones</button>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary comentarios"><a href="../pages/error404.html">Enviar</a></button>
                 </div>
             </form>
         </section>
