--- a/pages/error404.html
+++ b/pages/error404.html
@@ -47,11 +47,18 @@
     </header>
 
     <main>
-        <section class="fuenteSecundaria_404">
-            
-            <h1>Ups! 404</h1>
-            <h2>Al parecer la pagina a la que intentas acceder no esta disponible en estos momentos. En caso que necesites comunicarte con nosotros no dudes en hacer click en cualquiera de los puntos de contacto</h2>
-        </section>
+      <section class="fuenteSecundaria_404">
+        <h1>Ups! 404 not found</h1>
+      </section>
+      <section class="fuenteSecundaria_404 section_flex_main">
+        <div class="section_flex_img box">
+          <h2>Al parecer la pagina a la que intentas acceder no esta disponible en estos momentos porque como ven me dio flojera desarrollarla o agotaron mis energias con sus demandas. En caso que necesites comunicarte con nosotros no dudes en hacer click en cualquiera de nuestros puntos de contacto.</h2>
+          <img src="../assets/img/rsz_img_20221020_142250111_hdr.jpg" alt="Leia con flojera">
+        </div>  
+      </section>
+      <section class="fuenteSecundaria_404 box">
+        <h2>Gracias por el tiempo y paciencia que se tomaron en brindarnos su feedback. Espero que sigan atentos a nuestras nuevas aventuras</h2>
+      </section>
     </main>
 
     <footer>
