--- a/pages/error404.html
+++ b/pages/error404.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="./sobremi.html">Sobre Mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Familia</a>
+                <a class="nav-link active" href="./familia.html">Familia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./aventuras.html">Aventuras</a>
